# FacialReconstruction

./: LICENSE  README.md
FacialProjectCSC475/src/: CMakeLists.txt  create_csv.py  fn.h  main.cpp
FacialProjectCSC475/src/att_faces/: at.txt
FacialProjectCSC475/src/sheffieldcropped/: sheffieldcropped.txt
FacialProjectCSC475/src/sheffieldface/: create_csv.py  sheffieldface.txt
FacialProjectCSC475/src/sheffieldface/1a/: 1a000.pgm  1a001.pgm  1a002.pgm  1a003.pgm  1a004.pgm  1a005.pgm  1a006.pgm  1a007.pgm  1a008.pgm  1a009.pgm  1a010.pgm  1a011.pgm  1a012.pgm  1a013.pgm  1a014.pgm  1a015.pgm  1a016.pgm  1a017.pgm  1a018.pgm  1a019.pgm  1a020.pgm  1a021.pgm  1a022.pgm  1a023.pgm  1a024.pgm  1a025.pgm  1a026.pgm  1a027.pgm  1a028.pgm  1a029.pgm  1a030.pgm  1a031.pgm  1a032.pgm  1a033.pgm  1a034.pgm  1a035.pgm  1a036.pgm  1a037.pgm  1a038.pgm  1a039.pgm  (+14 more)
FacialProjectCSC475/src/sheffieldface/1b/: 1b000.pgm  1b001.pgm  1b002.pgm  1b003.pgm  1b004.pgm  1b005.pgm  1b006.pgm  1b007.pgm  1b008.pgm  1b009.pgm  1b010.pgm  1b011.pgm  1b012.pgm  1b013.pgm  1b014.pgm  1b015.pgm  1b016.pgm  1b017.pgm  1b018.pgm  1b019.pgm  1b020.pgm  1b021.pgm  1b022.pgm  1b023.pgm  1b024.pgm  1b025.pgm  1b026.pgm  1b027.pgm  1b028.pgm  1b029.pgm  1b030.pgm  1b031.pgm  1b032.pgm  1b033.pgm  1b034.pgm  1b035.pgm  1b036.pgm  1b037.pgm  1b038.pgm  1b039.pgm  (+44 more)
FacialProjectCSC475/src/sheffieldface/1c/: 1c000.pgm  1c001.pgm  1c002.pgm  1c003.pgm  1c004.pgm  1c005.pgm  1c006.pgm  1c007.pgm  1c008.pgm  1c009.pgm  1c010.pgm  1c011.pgm  1c012.pgm  1c013.pgm  1c014.pgm  1c015.pgm  1c016.pgm  1c017.pgm  (+57 more)
(+802 files in other folders)
